Fix invalid json in renovate file

--- a/renovate.json
+++ b/renovate.json
@@ -20,11 +20,10 @@
       "enabled": false
     },
     {
-      groupName: "ShapeGames",
-      matchPackagePrefixes: [
+      "groupName": "ShapeGames",
+      "matchPackagePrefixes": [
         "@shapegames/"
       ]
     }
-    
   ]
 }
