--- a/.github/workflows/release-with-branch-prefix.yml
+++ b/.github/workflows/release-with-branch-prefix.yml
@@ -13,7 +13,7 @@ on:
         type: string
         required: true
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
