Fix broken yaml structure

--- a/.github/workflows/bump-minor-version.yml
+++ b/.github/workflows/bump-minor-version.yml
@@ -7,9 +7,11 @@ on:
         required: true
 jobs:
   build:
-    - name:  'Automated Version Bump'
-      uses:  'phips28/gh-action-bump-version@master'
-      env:
-        GITHUB_TOKEN: ${{ secrets.gh_token }}
-      with:
-        default: minor
+    runs-on: ubuntu-latest
+    steps:
+      - name:  'Automated Version Bump'
+        uses:  'phips28/gh-action-bump-version@master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.gh_token }}
+        with:
+          default: minor
