--- a/.github/workflows/bump-minor-version.yml
+++ b/.github/workflows/bump-minor-version.yml
@@ -6,6 +6,8 @@ on:
     secrets:
       gh_token:
         required: true
+      gh_email: 
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,5 +17,6 @@ jobs:
         uses:  'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.gh_token }}
+          GITHUB_EMAIL: ${{ secrets.email }}
         with:
           default: minor
