--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -6,6 +6,8 @@ on:
         required: true
       encryption_key:
         required: true
+      repos:
+        required: true
 jobs:
   renovate:
     runs-on: ubuntu-latest
@@ -19,3 +21,4 @@ jobs:
           token: ${{ secrets.token }}
         env:
           LOG_LEVEL: 'debug'
+          RENOVATE_REPOSITORIES: ${{secrets.repos }}
