--- a/renovate-library.json
+++ b/renovate-library.json
@@ -4,28 +4,5 @@
   ],
   "prCreation": "immediate",
   "prHourlyLimit": 0,
-  "ignorePaths": ["packages/**"],
-  "hostRules": [
-    {
-      "matchHost": "https://npm.pkg.github.com/",
-      "hostType": "npm",
-      "token": "{{ secrets.GITHUB_NPM_ACCESS_TOKEN }}"
-    }
-  ],
-  "npmrc": "@shapegames:registry=https://npm.pkg.github.com/",
-  "packageRules": [
-    {
-      "matchDatasources": [
-        "docker"
-      ],
-      "matchUpdateTypes": [
-        "major"
-      ],
-      "enabled": false
-    },
-    {
-      "packagePatterns": ["typescript"],
-      "enabled": false
-    }
-  ]
+  "npmrc": "@shapegames:registry=https://npm.pkg.github.com/"
 }
