--- a/renovate-library.json
+++ b/renovate-library.json
@@ -4,12 +4,5 @@
   ],
   "prCreation": "immediate",
   "prHourlyLimit": 0,
-  "hostRules": [
-    {
-      "matchHost": "https://npm.pkg.github.com/",
-      "hostType": "npm",
-      "token": "{{ secrets.GITHUB_NPM_ACCESS_TOKEN }}"
-    }
-  ],
-  "npmrc": "@shapegames:registry=https://npm.pkg.github.com/",
+  "exposeAllEnv": true
 }
