feat(library-lint-build-test): add PR annotation

--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -37,6 +37,23 @@ jobs:
 
       - name: Lint
         run: pnpm lint
+        
+      - name: Merge lint reports
+        run: jq -s '[.[]]|flatten' eslint-reports/*.json &> eslint-reports/eslint_report.json
+
+      - name: Annotate Code Linting Results
+        uses: ataylorme/eslint-annotate-action@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          report-json: "eslint-reports/eslint_report.json"
+          only-pr-files: false
+
+      - name: Upload ESLint report
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: eslint-reports
+          path: eslint-reports
 
       - name: Build
         run: pnpm build
