--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -42,7 +42,7 @@ jobs:
         run: jq -s '[.[]]|flatten' eslint-reports/*.json &> eslint-reports/eslint_report.json
 
       - name: Annotate Code Linting Results
-        uses: ataylorme/eslint-annotate-action@v2
+        uses: ataylorme/eslint-annotate-action@1.2.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           report-json: "./eslint-reports/eslint_report.json"
