add npmrcMerge to renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "config:base"
   ],
+  "npmrcMerge": true,
   "prCreation": "immediate",
   "prHourlyLimit": 0,
   "ignorePaths": ["packages/**"],
