Read grouping for ShapeGames platform packages

--- a/renovate-client.json
+++ b/renovate-client.json
@@ -19,6 +19,13 @@
     {
       "packagePatterns": ["typescript"],
       "enabled": false
+    },
+    {
+      "groupName": "ShapeGames",
+      "excludePackagePatterns": ["^@shapegames/web-library"],
+      "matchPackagePrefixes": [
+        "@shapegames/"
+      ]
     }
   ]
 }
