--- a/.github/workflows/client-next-js-build.yml
+++ b/.github/workflows/client-next-js-build.yml
@@ -3,6 +3,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      HOST_ENV: ${{ secrets.HOST_ENV }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
