--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -9,6 +9,9 @@ on:
       branch:
         required: true
         type: string
+    secrets:
+      write_github_token:
+        required: true
 
 jobs:
   run:
@@ -29,32 +32,17 @@ jobs:
           node-version: 18
           cache: "pnpm"
 
-      - name: Create and switch to new branch
-        run: |
-          git checkout -b feat/template_update
-          git push --set-upstream origin new-branch
-
       - name: Run the provided npm script
         run: pnpm run ${{ inputs.script }}
-
-      - name: Commit changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add -A
-          git commit -n -m "feat: update from web-library-scripts" || echo "No changes to commit"
-          git push origin ${{ inputs.branch }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.write_github_token }}
           commit-message: "feat: update from web-library-scripts"
           title: "feat: update from web-library-scripts"
           branch: ${{ inputs.branch }}
           base: "main"
           delete-branch: true
-          draft: false
+          draft: false,
