fix(library-update): fix https auth issue

--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -34,6 +34,10 @@ jobs:
           
       - name: Install packages
         run: pnpm install
+        
+      - name: Setup git https auth
+        run: |
+          git config --local http.https://github.com/.extraheader AUTHORIZATION: basic ${{ secrets.write_github_token }}
 
       - name: Run the provided npm script
         run: pnpm run ${{ inputs.script }}
