--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -12,6 +12,10 @@ on:
     secrets:
       write_github_token:
         required: true
+      git_username:
+        required: true
+      git_email:
+        required: true
 
 jobs:
   run:
@@ -37,6 +41,8 @@ jobs:
         
       - name: Setup git https auth
         run: |
+          git config --global user.name "${{ secrets.git_username }}"
+          git config --global user.email "${{ secrets.git_email }}"
           git config --local http.https://github.com/.extraheader "AUTHORIZATION: basic ${{ secrets.write_github_token }}"
       - name: Run the provided npm script
         run: pnpm run ${{ inputs.script }}
