--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -41,8 +41,8 @@ jobs:
 
       - name: Setup git https auth
         run: |
-          git config --global user.name "${{ secrets.git_username }}"
-          git config --global user.email "${{ secrets.git_email }}"
+          git config --global user.name "${{ secrets.git_username }}" &&
+          git config --global user.email "${{ secrets.git_email }}" &&
           git config --local http.https://github.com/.extraheader "AUTHORIZATION: basic ${{ secrets.write_github_token }}"
       - name: Run the provided npm script
         run: pnpm run ${{ inputs.script }}
