--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -39,11 +39,13 @@ jobs:
       - name: Install packages
         run: pnpm install
 
-      - name: Setup git https auth
-        run: |
-          git config --global user.name "${{ secrets.git_username }}" &&
-          git config --global user.email "${{ secrets.git_email }}" &&
-          git config --local http.https://github.com/.extraheader "AUTHORIZATION: basic ${{ secrets.write_github_token }}"
+      - name: Configure git
+        uses: xiplias/github-git-config-action@v1
+        with:
+          user.name: ${{ secrets.git_username }}
+          user.email: ${{ secrets.git_email }}
+          github-token: ${{ secrets.write_github_token }}
+
       - name: Run the provided npm script
         run: pnpm run ${{ inputs.script }}
 
