--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Create Pull Request
         id: cpr
-        uses: peter-evans/create-pull-request@v5
+        uses: ShapeGames/create-pull-request-v5-modified@v5-modified
         with:
           token: ${{ secrets.write_github_token }}
           commit-message: "feat: update from web-library-scripts"
