--- a/.github/workflows/library-update.yml
+++ b/.github/workflows/library-update.yml
@@ -37,7 +37,7 @@ jobs:
           cache: "pnpm"
 
       - name: Install packages
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
 
       - name: Configure git
         uses: xiplias/github-git-config-action@v1
