--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,6 +1,30 @@
 # This workflows enables bumping minor version by tagging and updating package.json
-name: Bump Workflow
+#
+# It follows semver and will bump the minor version by default
+#
+# You can also specify the version bump with commits
+#
+# Major: commit message contains "BREAKING CHANGE" or "major"
+# Minor: commit message contains "feat" or "minor"
+# Patch: commit message contains "fix" or "patch"
+#
+# You can add it to your workflow like this:
+#
+# name: Bump version
+# on:
+#   push:
+#     branches:
+#       - main
+# jobs:
+#   bump:
+#     uses: ShapeGames/workflows/.github/workflows/bump-version.yml@main
+#     secrets:
+#       gh_token: ${{ secrets.GH_TOKEN }}
+#       gh_email: ${{ secrets.GH_EMAIL }}
+#     with:
+#       semver_bump: minor
 
+name: Bump Workflow
 on:
   workflow_call:
     secrets:
@@ -13,7 +37,7 @@ on:
         type: string
         default: minor
 jobs:
-  build:
+  bump:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
