--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -3,9 +3,9 @@ name: Docker Build
 on:
   workflow_call:
     secrets:
-      DOCKERHUB_USERNAME:
+      docker_username:
         required: true
-      DOCKERHUB_TOKEN:
+      docker_password:
         required: true
         
   
@@ -29,8 +29,8 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.docker_username }}
+          password: ${{ secrets.docker_password }}
       -
         name: Build and export to Docker
         uses: docker/build-push-action@v4
