--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -45,6 +45,8 @@ jobs:
           context: .
           load: true
           tags: ${{ env.TEST_TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             HOST_ENV=${{ inputs.HOST_ENV }}
             API_ENV=${{ inputs.API_ENV }}
