--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -53,7 +53,7 @@ jobs:
       -
         name: Start docker container
         run: |
-          docker run --rm ${{ env.TEST_TAG }}
+          docker run --rmd ${{ env.TEST_TAG }}
       - name: Check the deployed service URL
         uses: ShapeGames/url-health-check-action@v3
         with:
