--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -14,11 +14,8 @@ on:
       API_ENV: 
         type: string
         required: false
-        
-  
 env:
   TEST_TAG: user/app:test
-
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -53,7 +50,7 @@ jobs:
       -
         name: Start docker container
         run: |
-          docker run --rmd ${{ env.TEST_TAG }}
+          docker run --rm --detach ${{ env.TEST_TAG }}
       - name: Check the deployed service URL
         uses: ShapeGames/url-health-check-action@v3
         with:
