fix(client-docker-build): add retry and delay to url check to fix errors

--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -56,6 +56,8 @@ jobs:
         with:
           url: http://localhost:8080
           follow-redirect: true
+          max-attempts: 3
+          retry-delay: 5s
          
 
               
