--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -20,23 +20,18 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.docker_username }}
           password: ${{ secrets.docker_password }}
-      -
-        name: Build and export to Docker
+      - name: Build and export to Docker
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -47,8 +42,10 @@ jobs:
           build-args: |
             HOST_ENV=${{ inputs.HOST_ENV }}
             API_ENV=${{ inputs.API_ENV }}
-      -
-        name: Start docker container
+            
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+      - name: Start docker container
         run: |
           docker run --rm --detach -p 8080:8080 ${{ env.TEST_TAG }}
       - name: Check the deployed service URL
