--- a/.github/workflows/client-docker-build.yml
+++ b/.github/workflows/client-docker-build.yml
@@ -42,19 +42,12 @@ jobs:
           build-args: |
             HOST_ENV=${{ inputs.HOST_ENV }}
             API_ENV=${{ inputs.API_ENV }}
-            
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
       - name: Start docker container
         run: |
           docker run --rm --detach -p 8080:8080 ${{ env.TEST_TAG }}
       - name: Check the deployed service URL
-        uses: ShapeGames/url-health-check-action@v3
-        with:
-          url: http://localhost:8080
-          follow-redirect: true
-          max-attempts: 3
-          retry-delay: 5s
+        run: |
+         npx waitehr http://localhost:8080 --follow-redirect
          
 
               
