--- a/.github/workflows/client-next-js-build.yml
+++ b/.github/workflows/client-next-js-build.yml
@@ -19,5 +19,7 @@ jobs:
           path: .next/cache
           key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}
       - run: yarn build
+        env:
+          RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
       - run: yarn test
  
