--- a/.github/workflows/client-next-js-build.yml
+++ b/.github/workflows/client-next-js-build.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     env:
       HOST_ENV: ${{ secrets.HOST_ENV }}
     steps:
