feat(renovate-client): add priority to shapegames packages

--- a/renovate-client.json
+++ b/renovate-client.json
@@ -17,12 +17,13 @@
       "enabled": false
     },
     {
-      "packagePatterns": ["typescript"],
+      "packagePatterns": ["typescript", "next"],
       "enabled": false
     },
     {
       "groupName": "ShapeGames",
       "excludePackagePatterns": ["^@shapegames/web-library"],
+      "prPriority": 5,
       "matchPackagePrefixes": [
         "@shapegames/"
       ]
