--- a/.github/workflows/library-changesets-release.yml
+++ b/.github/workflows/library-changesets-release.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GH_PACKAGES_TOKEN: ${{ secrets.gh_packages_token }}
-      FEDERATION_ACCESS_KEY_ID: ${{ secrets.federation_access_key_id }}
-      FEDERATION_SECRET_KEY: ${{ secrets.federation_secret_key }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.federation_access_key_id }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.federation_secret_key }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
