--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -48,12 +48,14 @@ jobs:
 
       - name: Merge lint reports
         run: jq -s '[.[]]|flatten' eslint-reports/*.json &> eslint-reports/eslint_report.json
+        continue-on-error: true
 
       - name: Annotate Code Linting Results
         uses: ataylorme/eslint-annotate-action@1.2.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           report-json: "./eslint-reports/eslint_report.json"
+        continue-on-error: true
 
       - name: Upload ESLint report
         if: ${{ always() }}
@@ -61,6 +63,7 @@ jobs:
         with:
           name: eslint-reports
           path: eslint-reports
+        continue-on-error: true
 
       - name: Test
         run: pnpm test
