--- a/.github/workflows/library-changesets-release.yml
+++ b/.github/workflows/library-changesets-release.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GH_PACKAGES_TOKEN: ${{ secrets.gh_packages_token }}
+      NPM_TOKEN: ${{ secrets.gh_packages_token }}
       AWS_ACCESS_KEY_ID: ${{ secrets.federation_access_key_id }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.federation_secret_key }}
     steps:
