--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -41,7 +41,7 @@ jobs:
         run: pnpm install
       
       - name: Build package build
-        run: pnpm build
+        run: pnpm run build
   build_federation:
     name: Build federation package
     runs-on: "ubuntu-latest"
@@ -71,7 +71,7 @@ jobs:
         run: pnpm install
 
       - name: Build federation
-        run: pnpm build-federation
+        run: pnpm run build-federation
   test:
     name: Lint and Test
     runs-on: "ubuntu-latest"
