--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -101,7 +101,7 @@ jobs:
         run: pnpm install
 
       - name: Lint
-        run: pnpm lint
+        run: pnpm run lint
         continue-on-error: true
 
       - name: Merge lint reports
@@ -124,4 +124,4 @@ jobs:
         continue-on-error: true
 
       - name: Test
-        run: pnpm test
+        run: pnpm run test
