--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -23,3 +23,4 @@ jobs:
           RENOVATE_REPOSITORIES: ${{ secrets.repos }}
           GH_PACKAGES_TOKEN: ${{ secrets.token }}
           RENOVATE_EXPOSE_ALL_ENV: true
+          NPM_TOKEN: ${{ secrets.token }}
