--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -126,5 +126,8 @@ jobs:
           path: eslint-reports
         continue-on-error: true
 
+      - name: Build
+        run: pnpm run build
+
       - name: Test
         run: pnpm run test
