add delegated module action and remove old implementations

--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -10,7 +10,7 @@ on:
     inputs:
       node-version:
         type: string
-        default: '18'
+        default: "18"
 jobs:
   build_packages:
     timeout-minutes: 10
@@ -40,40 +40,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-      
+
       - name: Build package build
         run: pnpm run build
-  build_federation:
-    timeout-minutes: 10
-    name: Build federation package
-    runs-on: "ubuntu-latest"
-    env:
-      TURBO_TOKEN: ${{ secrets.turbo_token }}
-      TURBO_TEAM: ${{ secrets.turbo_team }}
-      GH_PACKAGES_TOKEN: ${{ secrets.gh_packages_token }}
-      NPM_TOKEN: ${{ secrets.gh_packages_token }}
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-
-      - name: Install PNPM
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ inputs.node-version }}
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Build federation
-        run: pnpm run build-federation
   test:
     timeout-minutes: 10
     name: Lint and Test
