--- a/.github/workflows/delegated-module-actions.yml
+++ b/.github/workflows/delegated-module-actions.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   platform_upload:
-    name: 'Upload Delegated Module (as web-platform)'
+    name: "Upload Delegated Module (as web-platform)"
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.repository, 'ShapeGames/web-platform') }}
     env:
@@ -15,7 +15,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.federation_secret_key }}
       RELATIVE_CI_KEY: ${{ secrets.RELATIVE_CI_KEY }}
     steps:
-      - name: 'Checkout Repo'
+      - name: "Checkout Repo"
         uses: actions/checkout@v3
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -32,7 +32,7 @@ jobs:
         run: yarn exec lerna run federation:upload --stream
 
   web_library_upload:
-    name: 'Upload Delegated Module (as web-library)'
+    name: "Upload Delegated Module (as web-library)"
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.repository, 'ShapeGames/web-library') }}
     env:
@@ -46,14 +46,14 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install PNPM
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
         with:
           version: 8
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'pnpm'
+          cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
       - name: Build packages
