--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -10,12 +10,12 @@ on:
     inputs:
       node-version:
         type: string
-        default: "18"
+        default: '18'
 jobs:
   build_packages:
     timeout-minutes: 10
     name: Build npm package
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     env:
       TURBO_TOKEN: ${{ secrets.turbo_token }}
       TURBO_TEAM: ${{ secrets.turbo_team }}
@@ -28,7 +28,7 @@ jobs:
           fetch-depth: 2
 
       - name: Install PNPM
-        uses: pnpm/action-setup@v2.2.2
+        uses: pnpm/action-setup@v4
         with:
           version: 8
 
@@ -36,7 +36,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
-          cache: "pnpm"
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
@@ -46,7 +46,7 @@ jobs:
   test:
     timeout-minutes: 10
     name: Lint and Test
-    runs-on: "ubuntu-latest"
+    runs-on: 'ubuntu-latest'
     env:
       TURBO_TOKEN: ${{ secrets.turbo_token }}
       TURBO_TEAM: ${{ secrets.turbo_team }}
@@ -59,7 +59,7 @@ jobs:
           fetch-depth: 2
 
       - name: Install PNPM
-        uses: pnpm/action-setup@v2.2.2
+        uses: pnpm/action-setup@v4
         with:
           version: 8
 
@@ -67,7 +67,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ inputs.node-version }}
-          cache: "pnpm"
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
@@ -84,7 +84,7 @@ jobs:
         uses: ataylorme/eslint-annotate-action@1.2.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          report-json: "./eslint-reports/eslint_report.json"
+          report-json: './eslint-reports/eslint_report.json'
         continue-on-error: true
 
       - name: Upload ESLint report
