--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -93,6 +93,7 @@ jobs:
         with:
           name: eslint-reports
           path: eslint-reports
+          overwrite: true
         continue-on-error: true
 
       - name: Build
