library-lint-build.yml: bump upload-artifact (#41)
* library-lint-build.yml: bump upload-artifact

* add overwrite to upload artifacts

--- a/.github/workflows/library-lint-build-test.yml
+++ b/.github/workflows/library-lint-build-test.yml
@@ -89,10 +89,11 @@ jobs:
 
       - name: Upload ESLint report
         if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: eslint-reports
           path: eslint-reports
+          overwrite: true
         continue-on-error: true
 
       - name: Build
