--- a/.github/workflows/library-changesets-release.yml
+++ b/.github/workflows/library-changesets-release.yml
@@ -5,10 +5,16 @@ on:
         required: true
       gh_token:
         required: true
+      kambi_artifactory_api_key:
+        required: true
+
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+
+    outputs:
+      published: ${{ steps.changesets.outputs.published }}
     env:
       GH_PACKAGES_TOKEN: ${{ secrets.gh_packages_token }}
       NPM_TOKEN: ${{ secrets.gh_packages_token }}
@@ -25,7 +31,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'pnpm'
+          cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
       - name: Create Release Pull Request or Publish to npm
@@ -33,8 +39,47 @@ jobs:
         uses: changesets/action@v1
         with:
           version: pnpm run version
-          title: 'ci(root): release versions'
-          commit: 'ci(root): release versions'
+          title: "ci(root): release versions"
+          commit: "ci(root): release versions"
           publish: pnpm run release
         env:
           GITHUB_TOKEN: ${{ secrets.gh_token }}
+
+  publish-kambi:
+    name: Publish to Kambi Artifactory
+    needs: release
+    if: needs.release.outputs.published == 'true'
+    runs-on: [shape-games-kambi-hosted-debian, dedicated-shape-games]
+    env:
+      GITHUB_TOKEN: ${{ secrets.gh_token }}
+      NPM_TOKEN: ${{ secrets.kambi_artifactory_api_key }}
+      NPM_CONFIG_USERCONFIG: ${{ github.workspace }}/.npmrc
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+
+      - name: Install PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Setup NPM config for Kambi registry
+        run: |
+          # # # Configure workspace .npmrc
+          echo "//artifactory.services.kambi.com/artifactory/api/npm/npm-shapegames/:_authToken=${NPM_TOKEN}" > .npmrc
+          echo "registry=https://artifactory.services.kambi.com/artifactory/api/npm/npm-shapegames/" >> .npmrc
+          echo "always-auth=true" >> .npmrc
+
+      - name: Build
+        run: pnpm run build
+
+      - name: Publish to Kambi Artifactory
+        run: pnpm run release
