--- a/.github/workflows/test-workflow-bump-prod.yml
+++ b/.github/workflows/test-workflow-bump-prod.yml
@@ -1,5 +1,9 @@
 name: Bump version
 on:
+  workflow_call:
+    secrets:
+      gh_token:
+        required: true
   push:
     branches:
       - test-prod
@@ -12,7 +16,7 @@ jobs:
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.gh_token }}
           tag_prefix: production-
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
